Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ fieldset {
 
 .hero, .bottom {
     background-color: var(--background-color);
+    overflow: hidden;
 }
 
 .footer a {
@@ -104,6 +105,7 @@ img {
     flex: 0.75;
     box-shadow: 0 5px 18px #888888;
     z-index: 1;
+    overflow: scroll;
 }
 
 .hero {
